src/objects/WAM_CustomSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>WAMCRM: custom Settings</description>
    <fields>
        <fullName>AUM_in_Manulife_Record_Type__c</fullName>
        <description>WAMCRM : AUM in Manulife Record Type</description>
        <inlineHelpText>WAMCRM : AUM in Manulife Record Type</inlineHelpText>
        <label>AUM in Manulife Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Distributor_Record_Type_Label__c</fullName>
        <label>Account Distributor Record Type Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Distributor_Record_Type_Name__c</fullName>
        <label>Account Distributor Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Distributor_Record_Type_Label__c</fullName>
        <description>WAMCRM : Contact Distributor Record Type Label</description>
        <inlineHelpText>WAMCRM : Contact Distributor Record Type Label</inlineHelpText>
        <label>Contact Distributor Record Type Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Distributor_Record_Type_Name__c</fullName>
        <description>WAMCRM : Contact Distributor Record Type Name</description>
        <inlineHelpText>WAMCRM : Contact Distributor Record Type Name</inlineHelpText>
        <label>Contact Distributor Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Purpose_Record_Type_Label__c</fullName>
        <label>Contact Purpose Record Type Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Country_Code__c</fullName>
        <description>WAMCRM: Default country code</description>
        <inlineHelpText>WAMCRM: Default country code</inlineHelpText>
        <label>Default Country Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Sales_Info_Record_Type__c</fullName>
        <description>WAMCRM : Distributor Sales InformationRecord Type</description>
        <inlineHelpText>WAMCRM : Distributor Sales InformationRecord Type</inlineHelpText>
        <label>Distributor Sales Info Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Record_Type__c</fullName>
        <description>WAMCRM : Event Record Type used to manage distributors</description>
        <inlineHelpText>WAMCRM : Event Record Type used to manage distributors</inlineHelpText>
        <label>Event Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fund_Record_Type__c</fullName>
        <description>WAMCRM : Fund Record Type to distinguish WAM funds</description>
        <inlineHelpText>WAMCRM : Fund Record Type to distinguish WAM funds</inlineHelpText>
        <label>Fund Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Distributor_Record_Type__c</fullName>
        <description>WAMCRM : Opportunity Distributor Record Type</description>
        <inlineHelpText>WAMCRM : Opportunity Distributor Record Type</inlineHelpText>
        <label>Opportunity Distributor Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Record_Type__c</fullName>
        <description>WAMCRM : Task Record Type to manage distributors</description>
        <inlineHelpText>WAMCRM : Task Record Type to manage distributors</inlineHelpText>
        <label>Task Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>WAM_CustomSetting</label>
</CustomObject>